--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EARLY LAB</title>
     <!-- Link to the external CSS file -->
-    <link rel="stylesheet" href="../css/eralylab_style.css">
+    <link rel="stylesheet" href="css/eralylab_style.css">
 </head>
 <body>
     <header>
@@ -23,10 +23,10 @@
     
             <div id="Header_NAVIGATION">
                 <div class="TAB">
-                    <a href="earlylab_Home.html">Home</a>
+                    <a href="html/earlylab_Home.html">Home</a>
                 </div>
                 <div class="TAB">
-                    <a href="earlylab_AboutUS.html">About Us</a>
+                    <a href="html/earlylab_AboutUS.html">About Us</a>
                 </div>
                 <div class="TAB">People</div>
                 <div class="TAB">Research</div>
@@ -77,6 +77,6 @@
     </footer>
 
     <!-- Link to the external JavaScript file -->
-    <!-- <script src="../js/earlylab_script.js"></script> -->
+    <!-- <script src="js/earlylab_script.js"></script> -->
 </body>
 </html>
