--- a/html/earlylab_About.html
+++ b/html/earlylab_About.html
@@ -11,25 +11,25 @@
     <header>
         <div id="Header_COL1" class="Header_COL">
             <div id="Header_LOGO">
-                <img src="../_img/EARLY Lab_logo - árbol.png" alt="árbol">
+                <img src="../_img/EARLY Lab_logo - árbol.png" alt="árbol">                
             </div>
+
+            <div id="Header_TITLE">
+                <h1>EARLY LAB</h1>
+                <!-- <p>Educational Assessment, Research, and Learning of Young Children</p> -->
+            </div> 
         </div>
 
         <div id="Header_COL2" class="Header_COL">
-            <div id="Header_TITLE">
-                <h1>EARLY LAB</h1>
-                <p>Educational Assessment, Research, and Learning of Young Children</p>
-            </div>    
-    
             <div id="Header_NAVIGATION">
                 <div class="TAB">
                     <a href="earlylab_Home.html">Home</a>
                 </div>
                 <div class="TAB">
-                    <a href="earlylab_AboutUS.html">About Us</a>
+                    <a href="earlylab_About.html">About</a>
                 </div>
-                <div class="TAB">People</div>
                 <div class="TAB">Research</div>
+                <div class="TAB">People</div>
                 <div class="TAB">Publications</div>
                 <div class="TAB">Resources</div>
                 <div class="TAB">Contact</div>
