--- a/html/earlylab_Home.html
+++ b/html/earlylab_Home.html
@@ -11,25 +11,25 @@
     <header>
         <div id="Header_COL1" class="Header_COL">
             <div id="Header_LOGO">
-                <img src="../_img/EARLY Lab_logo - árbol.png" alt="árbol">
+                <img src="../_img/EARLY Lab_logo - árbol.png" alt="árbol">                
             </div>
+
+            <div id="Header_TITLE">
+                <h1>EARLY LAB</h1>
+                <!-- <p>Educational Assessment, Research, and Learning of Young Children</p> -->
+            </div> 
         </div>
 
         <div id="Header_COL2" class="Header_COL">
-            <div id="Header_TITLE">
-                <h1>EARLY LAB</h1>
-                <p>Educational Assessment, Research, and Learning of Young Children</p>
-            </div>    
-    
             <div id="Header_NAVIGATION">
                 <div class="TAB">
                     <a href="earlylab_Home.html">Home</a>
                 </div>
                 <div class="TAB">
-                    <a href="earlylab_AboutUS.html">About Us</a>
+                    <a href="earlylab_About.html">About</a>
                 </div>
-                <div class="TAB">People</div>
                 <div class="TAB">Research</div>
+                <div class="TAB">People</div>
                 <div class="TAB">Publications</div>
                 <div class="TAB">Resources</div>
                 <div class="TAB">Contact</div>
@@ -40,18 +40,19 @@
     
     <main>
         <section id="Main_HEADER">
-            <div class="Main_COL">
-                <h2 class="Main_TITLE">Home</h2>
+            <div class="Main_COL Main_COL1">
+                <h2 class="Main_TITLE">EARLY LAB</h2>
+                <p class="Main_TEXT">Educational Assessment, Research, and Learning of Young Children</p>
             </div>
 
-            <div class="Main_COL">
+            <div class="Main_COL Main_COL2">
 
             </div>
         </section>
 
         <section id="Section1">
             <div class="Main_COL Main_COL1">
-                <h3 class="Section_HEADER">Section Header 1</h3>
+                <h3 class="Section_HEADER">Philosophy Statement</h3>
                 <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
 
@@ -62,7 +63,7 @@
 
         <section id="Section2">
             <div class="Main_COL Main_COL1">
-                <h3 class="Section_HEADER">Section Header 2</h3>
+                <h3 class="Section_HEADER">Lab News</h3>
                 <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
 
