--- a/html/earlylab_Home.html
+++ b/html/earlylab_Home.html
@@ -16,37 +16,19 @@
 
             <div id="Header_TITLE">
                 <h1>EARLY LAB</h1>
-                <!-- <p>Educational Assessment, Research, and Learning of Young Children</p> -->
             </div> 
         </div>
 
         <div id="Header_COL2" class="Header_COL">
-            <div id="Header_NAVIGATION">
-                <div class="TAB">
-                    <a href="earlylab_Home.html">Home</a>
-                </div>
-                <div class="TAB">
-                    <a href="earlylab_About.html">About</a>
-                </div>
-                <div class="TAB">Research</div>
-                <div class="TAB">People</div>
-                <div class="TAB">Publications</div>
-                <div class="TAB">Resources</div>
-                <div class="TAB">Contact</div>
-            </div>
+            <nav id="Header_NAVIGATION"></nav>
         </div>
-
     </header>
     
-    <main>
+    <main> 
         <section id="Main_HEADER">
-            <div class="Main_COL Main_COL1">
+            <div class="Main_COL1">
                 <h2 class="Main_TITLE">EARLY LAB</h2>
                 <p class="Main_TEXT">Educational Assessment, Research, and Learning of Young Children</p>
-            </div>
-
-            <div class="Main_COL Main_COL2">
-
             </div>
         </section>
 
@@ -79,5 +61,6 @@
 
     <!-- Link to the external JavaScript file -->
     <!-- <script src="../js/earlylab_script.js"></script> -->
+    <script src="../js/earlylab_nav.js"></script> <!-- nav -->
 </body>
 </html>
