--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="css/eralylab_style.css">
 </head>
-<body>
+<body> <!-- Home, but not dynamically -->
     <header>
         <div id="Header_COL1" class="Header_COL">
             <div id="Header_LOGO">
@@ -16,26 +16,36 @@
 
             <div id="Header_TITLE">
                 <h1>EARLY LAB</h1>
-                <!-- <p>Educational Assessment, Research, and Learning of Young Children</p> -->
             </div> 
         </div>
 
         <div id="Header_COL2" class="Header_COL">
             <div id="Header_NAVIGATION">
-                <div class="TAB">
-                    <a href="html/earlylab_Home.html">Home</a>
-                </div>
-                <div class="TAB">
-                    <a href="html/earlylab_About.html">About</a>
-                </div>
-                <div class="TAB">Research</div>
-                <div class="TAB">People</div>
-                <div class="TAB">Publications</div>
-                <div class="TAB">Resources</div>
-                <div class="TAB">Contact</div>
+                <ul>
+                    <li class="TAB">
+                        <a href="html/earlylab_Home.html">Home</a>
+                    </li>
+                    <li class="TAB">
+                        <a href="html/earlylab_About.html">About</a>
+                    </li>
+                    <li class="TAB">
+                        <a href="html/earlylab_Research.html">Research</a>
+                    </li>
+                    <li class="TAB">
+                        <a href="html/earlylab_People.html">People</a>
+                    </li>
+                    <li class="TAB">
+                        <a href="">Publications</a>
+                    </li>
+                    <li class="TAB">
+                        <a href="">Resources</a>
+                    </li>
+                    <li class="TAB">
+                        <a href="">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
-
     </header>
     
     <main>
@@ -43,10 +53,6 @@
             <div class="Main_COL">
                 <h2 class="Main_TITLE">EARLY LAB</h2>
                 <p class="Main_TEXT">Educational Assessment, Research, and Learning of Young Children</p>
-            </div>
-
-            <div class="Main_COL">
-
             </div>
         </section>
 
@@ -79,5 +85,6 @@
 
     <!-- Link to the external JavaScript file -->
     <!-- <script src="js/earlylab_script.js"></script> -->
+    <!-- <script src="../js/earlylab_nav.js"></script> -->
 </body>
 </html>
