--- a/html/earlylab_People.html
+++ b/html/earlylab_People.html
@@ -39,7 +39,7 @@
         <section id="Section2" class="Section2ColBlockBlock">
             <div class="Section2ColTable">
                 <div class="Table_COL Table_COL1">
-                    <img src="../_img/EARLY Lab_badeg_árbol.png" alt="árbol">
+                    <img src="../_img/EARLY Lab_badge - árbol.png" alt="árbol">
                 </div>
                 
                 <div class="Table_COL Table_COL2">
@@ -61,7 +61,7 @@
         <section id="Section3" class="Section2ColBlockBlock">
             <div class="Section2ColTable">
                 <div class="Table_COL Table_COL1">
-                    <img src="../_img/EARLY Lab_badeg_árbol.png" alt="árbol">
+                    <img src="../_img/EARLY Lab_badge - árbol.png" alt="árbol">
                 </div>
                 
                 <div class="Table_COL Table_COL2">
