--- a/html/earlylab_People.html
+++ b/html/earlylab_People.html
@@ -11,7 +11,7 @@
     <header>
         <div id="Header_COL1" class="Header_COL">
             <div id="Header_LOGO">
-                <img src="../_img/EARLY Lab_logo.png" alt="árbol">                
+                <img src="../_img/EARLY_Lab_logo.png" alt="árbol">                
             </div>
 
             <div id="Header_TITLE">
@@ -39,7 +39,7 @@
         <section id="Section2" class="Section2ColBlockBlock">
             <div class="Section2ColTable">
                 <div class="Table_COL Table_COL1">
-                    <img src="../_img/EARLY Lab_badge.png" alt="árbol">
+                    <img src="../_img/EARLY_Lab_badge.png" alt="árbol">
                 </div>
                 
                 <div class="Table_COL Table_COL2">
@@ -61,7 +61,7 @@
         <section id="Section3" class="Section2ColBlockBlock">
             <div class="Section2ColTable">
                 <div class="Table_COL Table_COL1">
-                    <img src="../_img/EARLY Lab_badge.png" alt="árbol">
+                    <img src="../_img/EARLY_Lab_badge.png" alt="árbol">
                 </div>
                 
                 <div class="Table_COL Table_COL2">
