--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div id="Header_COL1" class="Header_COL">
             <div id="Header_LOGO">
-                <img src="_img/EARLY_Lab_logo.png" alt="árbol">                
+                <img src="_img/EARLY_Lab_logo.png" alt="logo">                
             </div>
 
             <div id="Header_TITLE">
@@ -63,7 +63,7 @@
             </div>
 
             <div class="Main_COL Main_COL2">
-                <img src="_img/EARLY_Lab_logo.png" alt="árbol">
+                <img src="_img/EARLY_Lab_logo.png" alt="logo">
             </div>
         </section>
 
@@ -74,7 +74,7 @@
             </div>
 
             <div class="Main_COL Main_COL2">
-                <img src="_img/EARLY_Lab_logo.png" alt="árbol">
+                <img src="_img/EARLY_Lab_logo.png" alt="logo">
             </div>
         </section>
     </main>
