--- a/html/earlylab_Home.html
+++ b/html/earlylab_Home.html
@@ -11,7 +11,7 @@
     <header>
         <div id="Header_COL1" class="Header_COL">
             <div id="Header_LOGO">
-                <img src="../_img/EARLY_Lab_logo.png" alt="árbol">                
+                <img src="../_img/EARLY_Lab_logo.png" alt="logo">               
             </div>
 
             <div id="Header_TITLE">
@@ -39,7 +39,7 @@
             </div>
 
             <div class="Main_COL Main_COL2">
-                <img src="../_img/EARLY_Lab_logo.png" alt="árbol">
+                <img src="../_img/EARLY_Lab_logo.png" alt="logo">
             </div>
         </section>
 
@@ -50,7 +50,7 @@
             </div>
 
             <div class="Main_COL Main_COL2">
-                <img src="../_img/EARLY_Lab_logo.png" alt="árbol">
+                <img src="../_img/EARLY_Lab_logo.png" alt="logo">
             </div>
         </section>
     </main>
