--- a/html/earlylab_Home.html
+++ b/html/earlylab_Home.html
@@ -20,7 +20,8 @@
         </div>
 
         <div id="Header_COL2" class="Header_COL">
-            <nav id="Header_NAVIGATION"></nav>
+            <nav id="Header_NAVIGATION">                
+            </nav>
         </div>
     </header>
     
