--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div id="Header_COL2" class="Header_COL">
-            <div id="Header_NAVIGATION">
+            <nav id="Header_NAVIGATION">
                 <ul>
                     <li class="TAB">
                         <a href="html/earlylab_Home.html">Home</a>
@@ -35,22 +35,22 @@
                         <a href="html/earlylab_People.html">People</a>
                     </li>
                     <li class="TAB">
-                        <a href="">Publications</a>
+                        <a href="html/earlylab_Publications.html">Publications</a>
                     </li>
                     <li class="TAB">
                         <a href="">Resources</a>
                     </li>
                     <li class="TAB">
-                        <a href="">Contact</a>
+                        <a href="html/earlylab_Contact.html">Contact</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </header>
     
     <main>
         <section id="Main_HEADER">
-            <div class="Main_COL">
+            <div class="Main_COL1">
                 <h2 class="Main_TITLE">EARLY LAB</h2>
                 <p class="Main_TEXT">Educational Assessment, Research, and Learning of Young Children</p>
             </div>
