--- a/html/earlylab_Research.html
+++ b/html/earlylab_Research.html
@@ -11,7 +11,7 @@
     <header>
         <div id="Header_COL1" class="Header_COL">
             <div id="Header_LOGO">
-                <img src="../_img/EARLY Lab_logo - árbol.png" alt="árbol">                
+                <img src="../_img/EARLY_Lab_logo.png" alt="logo">                
             </div>
 
             <div id="Header_TITLE">
