--- a/html/earlylab_Home.html
+++ b/html/earlylab_Home.html
@@ -6,60 +6,51 @@
     <title>EARLY LAB</title>
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="../css/eralylab_style.css">
+    <link rel="stylesheet" href="../css/eralylab_header.css">
+    <link rel="stylesheet" href="../css/earlylab_main.css">
+    <link rel="stylesheet" href="../css/earlylab_home.css">
 </head>
 <body>
-    <header>
-        <div id="Header_COL1" class="Header_COL">
-            <div id="Header_LOGO">
-                <img src="../_img/EARLY_Lab_logo.png" alt="logo">               
+    <div class="Wrapper">
+        <header>
+            <div id="Header_COL1" class="Header_COL">
+                <a href="../html/earlylab_Home.html">
+                    <div id="Header_LOGO"><img src="../_img/EARLY_Lab_logo.png" alt="logo"></div>
+                    <div id="Header_TITLE"><h1>EARLY LAB</h1></div> 
+                </a>
             </div>
-
-            <div id="Header_TITLE">
-                <h1>EARLY LAB</h1>
-            </div> 
-        </div>
-
-        <div id="Header_COL2" class="Header_COL">
-            <nav id="Header_NAVIGATION">                
-            </nav>
-        </div>
-    </header>
-    
-    <main> 
-        <section id="Main_HEADER">
-            <div class="Main_COL1">
+            <div id="Header_COL2" class="Header_COL">
+                <nav id="Header_NAVIGATION"><!-- Navigation added through js. --></nav>
+            </div>
+        </header>    
+        <main>
+            <section class="Main_HEADER Main_BLOCK">
                 <h2 class="Main_TITLE">EARLY LAB</h2>
                 <p class="Main_TEXT">Educational Assessment, Research, and Learning of Young Children</p>
-            </div>
-        </section>
-
-        <section id="Section1">
-            <div class="Main_COL Main_COL1">
-                <h3 class="Section_HEADER">Philosophy Statement</h3>
-                <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-
-            <div class="Main_COL Main_COL2">
-                <img src="../_img/EARLY_Lab_logo.png" alt="logo">
-            </div>
-        </section>
-
-        <section id="Section2">
-            <div class="Main_COL Main_COL1">
-                <h3 class="Section_HEADER">Lab News</h3>
-                <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-
-            <div class="Main_COL Main_COL2">
-                <img src="../_img/EARLY_Lab_logo.png" alt="logo">
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 EARLY LAB</p>
-    </footer>
-
+            </section>
+            <section class="Main_FLEX">
+                <div class="Main_COL Main_COL1">
+                    <h3 class="Section_HEADER">Philosophy Statement</h3>
+                    <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="Main_COL Main_COL2">
+                    <img src="../_img/EARLY_Lab_logo.png" alt="logo">
+                </div>
+            </section>
+            <section class="Main_FLEX">
+                <div class="Main_COL Main_COL1">
+                    <h3 class="Section_HEADER">Philosophy Statement</h3>
+                    <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="Main_COL Main_COL2">
+                    <img src="../_img/EARLY_Lab_logo.png" alt="logo">
+                </div>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2025 EARLY LAB</p>
+        </footer>
+    </div>
     <!-- Link to the external JavaScript file -->
     <!-- <script src="../js/earlylab_script.js"></script> -->
     <script src="../js/earlylab_nav.js"></script> <!-- nav -->
