--- a/html/earlylab_Research.html
+++ b/html/earlylab_Research.html
@@ -5,69 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EARLY LAB</title>
     <!-- Link to the external CSS file -->
-    <link rel="stylesheet" href="../css/eralylab_style.css">
+    <link rel="stylesheet" href="../css/eralylab_style.css">    
+    <link rel="stylesheet" href="../css/eralylab_header.css">
+    <link rel="stylesheet" href="../css/earlylab_main.css">
+</head>
 </head>
 <body>
-    <header>
-        <div id="Header_COL1" class="Header_COL">
-            <div id="Header_LOGO">
-                <img src="../_img/EARLY_Lab_logo.png" alt="logo">                
+    <div class="Wrapper">
+        <header>
+            <div id="Header_COL1" class="Header_COL">
+                <a href="../html/earlylab_Home.html">
+                    <div id="Header_LOGO"><img src="../_img/EARLY_Lab_logo.png" alt="logo"></div>
+                    <div id="Header_TITLE"><h1>EARLY LAB</h1></div> 
+                </a>
             </div>
-
-            <div id="Header_TITLE">
-                <h1>EARLY LAB</h1>
-            </div> 
-        </div>
-
-        <div id="Header_COL2" class="Header_COL">
-            <nav id="Header_NAVIGATION"></nav>
-        </div>
-    </header>
-    
-    <main>
-        <section id="Main_HEADER">
-            <div class="Main_COL">
+            <div id="Header_COL2" class="Header_COL">
+                <nav id="Header_NAVIGATION"><!-- Navigation added through js. --></nav>
+            </div>
+        </header>    
+        <main>
+            <section class="Main_HEADER Main_BLOCK">
                 <h2 class="Main_TITLE">Research</h2>
-            </div>
-        </section>
-
-        <section id="Section1" class="Section11U"> <!--11U = block, block, and unumbered list --> 
-            <h3 class="Section_HEADER SectionBlock">Our Focus</h3>
-            <p class="Section_TEXT SectionBlock">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="Section_TEXT SectionBlock">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="SectionBlock">
-                <ul>
+            </section>
+    
+            <section class="Main_BLOCK">
+                <h3 class="Section_HEADER">Our Focus</h3>
+                <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <ul class="Section_LIST">
                     <li><a href="">Lorem ipsum</a></li>
                     <li><a href="">Lorem ipsum</a></li>
                     <li><a href="">Lorem ipsum</a></li>
                     <li><a href="">Lorem ipsum</a></li>
                 </ul>
-            </div>
-        </section>
-
-        <section id="Section2" class="Section1I"> <!-- block, and unumbered list -->
-            <h4 class="Section_TITLE SectionBlock">Research pillars of the Lab</h4>
-            <p class="Section_TEXT SectionBlock">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <img src="../_img/EARLY Lab_logo - árbol.png" alt="">
-        </section>
-
-        <section id="Section3" class="Section2ColBlockBlock">
-            <h4 class="Section_TITLE SectionBlock">Research pillars of the Lab</h4>
-            <p class="Section_TEXT SectionBlock">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <img src="../_img/EARLY Lab_logo - árbol.png" alt="">
-        </section>
-
-        <section id="Section4" class="Section2ColBlockBlock">
-            <h4 class="Section_TITLE SectionBlock">Research pillars of the Lab</h4>
-            <p class="Section_TEXT SectionBlock">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <img src="../_img/EARLY Lab_logo - árbol.png" alt="">
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 EARLY LAB</p>
-    </footer>
-
+            </section>
+            <section class="Main_BLOCK">
+                <h4 class="Section_TITLE">Research pillars of the Lab</h4>
+                <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <img src="../_img/EARLY_Lab_logo.png" alt="">
+            </section>
+            <section class="Main_BLOCK">
+                <h4 class="Section_TITLE">Research pillars of the Lab</h4>
+                <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <img src="../_img/EARLY_Lab_logo.png" alt="">
+            </section>
+            <section class="Main_BLOCK">
+                <h4 class="Section_TITLE">Research pillars of the Lab</h4>
+                <p class="Section_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <img src="../_img/EARLY_Lab_logo.png" alt="">
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2025 EARLY LAB</p>
+        </footer>
+    </div>
     <!-- Link to the external JavaScript file -->
     <!-- <script src="../js/earlylab_script.js"></script> -->
     <script src="../js/earlylab_nav.js"></script> <!-- nav -->
