--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <div id="Header_COL1" class="Header_COL">
                 <a href="index.html">
-                    <div id="Header_LOGO"><img src="../_img/EARLY_Lab_logo.png" alt="logo"></div>
+                    <div id="Header_LOGO"><img src="_img/EARLY_Lab_logo.png" alt="logo"></div>
                     <div id="Header_TITLE"><h1>EARLY LAB</h1></div> 
                 </a>
             </div>
